# Jfrog-WAR-deploy

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
doc/: deploy-shell-sript.md  setup.md
example/: docker-compose.yaml
example/deploy/: deploy.sh
src/: main.rs  version_object.rs
