[package]
name = "Jfrog-WAR-deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "stream", "rustls-tls"] }
base64 = "0.22.1"
regex = "1.11.1"
chrono = "0.4.41"
tokio-util = "0.7.15"
futures-util = "0.3.31"

